# allowed-import-aliases

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  README.md  pyproject.toml
allowed_import_aliases/: __init__.py  main.py  parse.py
benchmarks/: measure.py
tests/: test_parse.py
