[tool.poetry]
name = "allowed-import-aliases"
version = "0.1.0"
description = ""
authors = ["Andrew Parsons <parsonsandrew1@gmail.com>"]
readme = "README.md"
packages = [{include = "allowed_import_aliases"}]

[tool.poetry.dependencies]
python = "^3.8"
typing-extensions = "^4.9.0"

[tool.poetry.scripts]
allowed_import_aliases = "allowed_import_aliases.main:main"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
seaborn = "^0.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
